--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+git add requirements.txt
+git commit -m "Added requirements.txt for Render deployment"
+git push origin main
 acres==0.3.0
 aiofiles==24.1.0
 aiohappyeyeballs==2.4.4
@@ -108,7 +111,6 @@ langchain-ollama==0.2.3
 langchain-text-splitters==0.3.6
 langsmith==0.3.10
 lightgbm==4.5.0
-llava==0.0.1.dev0
 llvmlite==0.44.0
 looseversion==1.3.0
 lxml==5.3.0
@@ -233,7 +235,7 @@ tenacity==9.0.0
 threadpoolctl==3.5.0
 tokenizers==0.21.0
 torch==2.0.0
-torchaudio==2.5.1
+torchaudio==2.0.0
 torchvision==0.15.1
 tornado==6.4.2
 tqdm==4.66.1
