--- a/requirements.txt
+++ b/requirements.txt
@@ -1,262 +1,7 @@
-acres==0.3.0
-aiofiles==24.1.0
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
-aiosignal==1.3.2
-annotated-types==0.7.0
-anyio==4.8.0
-appnope==0.1.4
-asgiref==3.8.1
-asttokens==3.0.0
-attrs==24.3.0
-backoff==2.2.1
-bcrypt==4.2.1
-beautifulsoup4==4.13.3
-blinker==1.9.0
-boto3==1.36.26
-botocore==1.36.26
-build==1.2.2.post1
-cachetools==5.5.2
-category_encoders==2.7.0
-certifi==2024.12.14
-cffi==1.17.1
-charset-normalizer==3.4.1
-chroma-hnswlib==0.7.6
-chromadb==0.6.3
-ci-info==0.3.0
-click==8.1.8
-cloudpickle==3.1.1
-coloredlogs==15.0.1
-comm==0.2.2
-configobj==5.0.9
-configparser==7.1.0
-contourpy==1.3.1
-cryptography==44.0.1
-cycler==0.12.1
-Cython==3.0.11
-dash==2.18.2
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-dataclasses-json==0.6.7
-datasets==2.16.1
-debugpy==1.8.12
-decorator==5.1.1
-Deprecated==1.2.18
-deprecation==2.1.0
-dill==0.3.7
-durationpy==0.9
-easydict==1.11
-etelemetry==0.3.1
-executing==2.2.0
-faiss-cpu==1.10.0
-fastapi==0.115.8
-fastjsonschema==2.21.1
-feedparser==6.0.11
-filelock==3.16.1
-fitz==0.0.1.dev2
-Flask==3.0.3
-flatbuffers==25.2.10
-fonttools==4.55.5
-frontend==0.0.3
-frozenlist==1.5.0
-fsspec==2023.10.0
-gensim==4.3.2
-google-auth==2.38.0
-google_search_results==2.4.2
-googleapis-common-protos==1.68.0
-grpcio==1.70.0
-gunicorn==23.0.0
-h11==0.14.0
-httpcore==1.0.7
-httplib2==0.22.0
-httptools==0.6.4
-httpx==0.28.1
-httpx-sse==0.4.0
-huggingface-hub==0.27.1
-humanfriendly==10.0
-idna==3.10
-imbalanced-learn==0.13.0
-importlib_metadata==8.5.0
-importlib_resources==6.5.2
-iniconfig==2.0.0
-ipykernel==6.29.5
-ipython==8.32.0
-ipywidgets==8.1.5
-isodate==0.6.1
-itsdangerous==2.2.0
-jedi==0.19.2
-Jinja2==3.1.5
-jmespath==1.0.1
-joblib==1.3.2
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyterlab_widgets==3.0.13
-kaleido==0.2.1
-kiwisolver==1.4.8
-kubernetes==32.0.1
-langchain==0.3.19
-langchain-aws==0.2.13
-langchain-chroma==0.2.2
-langchain-community==0.3.18
-langchain-core==0.3.37
-langchain-ollama==0.2.3
-langchain-text-splitters==0.3.6
-langsmith==0.3.10
-lightgbm==4.5.0
-llvmlite==0.44.0
-looseversion==1.3.0
-lxml==5.3.0
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-marshmallow==3.26.1
-matplotlib==3.7.5
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mmh3==5.1.0
-monotonic==1.6
-mpmath==1.3.0
-multidict==6.1.0
-multiprocess==0.70.15
-mypy-extensions==1.0.0
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.4.2
-nibabel==5.3.2
-nipype==1.9.2
-nltk==3.8.1
-numba==0.61.0
-numpy==1.26.4
-oauthlib==3.2.2
-ollama==0.4.7
-onnxruntime==1.20.1
-opentelemetry-api==1.30.0
-opentelemetry-exporter-otlp-proto-common==1.30.0
-opentelemetry-exporter-otlp-proto-grpc==1.30.0
-opentelemetry-instrumentation==0.51b0
-opentelemetry-instrumentation-asgi==0.51b0
-opentelemetry-instrumentation-fastapi==0.51b0
-opentelemetry-proto==1.30.0
-opentelemetry-sdk==1.30.0
-opentelemetry-semantic-conventions==0.51b0
-opentelemetry-util-http==0.51b0
-orjson==3.10.15
-overrides==7.7.0
-packaging==24.2
-pandas==2.1.4
-parso==0.8.4
-pathlib==1.0.1
-patsy==1.0.1
-pdfminer.six==20231228
-pdfplumber==0.11.5
-pexpect==4.9.0
-pillow==11.0.0
-platformdirs==4.3.6
-plotly==5.24.1
-plotly-resampler==0.10.0
-pluggy==1.5.0
-pmdarima==2.0.4
-posthog==3.15.1
-prompt_toolkit==3.0.50
-propcache==0.2.1
-protobuf==5.29.3
-prov==2.0.1
-psutil==6.1.1
-ptyprocess==0.7.0
-pure_eval==0.2.3
-puremagic==1.28
-pyarrow==19.0.0
-pyarrow-hotfix==0.6
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycaret==3.3.2
-pycparser==2.22
-pydantic==2.10.6
-pydantic-settings==2.8.0
-pydantic_core==2.27.2
-pydot==3.0.4
-Pygments==2.19.1
-PyMuPDF==1.25.3
-pyod==2.0.3
-pyparsing==3.2.1
-pypdf==5.3.0
-pypdfium2==4.30.1
-PyPika==0.48.9
-pyproject_hooks==1.2.0
-pytest==8.3.4
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pytz==2024.2
-pyxnat==1.6.3
-PyYAML==6.0.2
-pyzmq==26.2.1
-rdflib==6.3.2
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.3
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-retrying==1.3.4
-rich==13.9.4
-rpds-py==0.22.3
-rsa==4.9
-s3transfer==0.11.2
-safetensors==0.5.2
-schemdraw==0.15
-scikit-base==0.7.8
-scikit-learn==1.4.2
-scikit-plot==0.3.7
-scipy==1.10.1
-sentence-splitter==1.4
-sentence-transformers==3.4.1
-sgmllib3k==1.0.0
-shellingham==1.5.4
-simplejson==3.20.1
-six==1.17.0
-sklearn-compat==0.1.3
-sktime==0.26.0
-smart-open==7.1.0
-sniffio==1.3.1
-soupsieve==2.6
-SQLAlchemy==2.0.38
-stack-data==0.6.3
-starlette==0.45.3
-statsmodels==0.14.4
-sympy==1.13.1
-tbats==1.1.3
-tenacity==9.0.0
-threadpoolctl==3.5.0
-tokenizers==0.21.0
-torch==2.0.0
-torchaudio==2.0.0
-torchvision==0.15.1
-tornado==6.4.2
-tqdm==4.66.1
-traitlets==5.14.3
-traits==7.0.2
-transformers==4.49.0
-tsdownsample==0.1.4.1
-typer==0.15.1
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tzdata==2025.1
-urllib3==2.3.0
-uvicorn==0.34.0
-uvloop==0.21.0
-watchfiles==1.0.4
-wcwidth==0.2.13
-websocket-client==1.8.0
-websockets==15.0
-Werkzeug==3.0.6
-widgetsnbextension==4.0.13
-wrapt==1.17.2
-wurlitzer==3.1.1
-xxhash==3.5.0
-yarl==1.18.3
-yellowbrick==1.5
-zipp==3.21.0
-zstandard==0.23.0
+flask
+gunicorn
+requests
+streamlit
+sentence-transformers
+faiss-cpu
+numpy
